--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,13 @@
+FROM mjgargani/puppeteer:trybe1.0 AS build
 
+ENV FRONT_HOST=todofrontend
+
+ENV FRONT_PORT=3000
+
+WORKDIR /usr/local/bin
+
+COPY ["./","./"]
+
+RUN npm install
+
+ENTRYPOINT ["npm test"]
