refactor(/traefik/external/dashboard.yml): Nome de domínio do "traefik" renomeado

--- a/traefik/external/dashboard.yml
+++ b/traefik/external/dashboard.yml
@@ -1,7 +1,7 @@
 http:
   routers:
     traefik:
-      rule: Host(`traefik.fgarioli.com.br`)
+      rule: Host(`traefik.thiago.fgarioli.com.br`)
       service: api@internal
       entrypoints: websecure
       tls:
