--- a/traefik/users.conf
+++ b/traefik/users.conf
@@ -1,1 +1,2 @@
 fgarioli:$2y$05$gcF5ZC.iS8D1iqAd8iL8ge5CzBQvT4mOtWY4OtTxGLPDkDXo4jdQS
+thiago-martins:$2y$05$djtoxqfNHtZltI1.4npwSOjuGWMVn4Akq7NVxLlZVATiES7XaZOXe
