--- a/docker/docker-compose.prod.yaml
+++ b/docker/docker-compose.prod.yaml
@@ -4,18 +4,28 @@ services:
     image: todobackend
     build: ./todo-app/back-end
     restart: always
-    ports:
-      - 3001:3001
+    networks:
+      - todo-app
+
   todofront:
     image: todofrontend
     build: ./todo-app/front-end
     restart: always
-    ports:
-      - 3000:3000
     depends_on:
       - todoback
     environment:
       - REACT_APP_API_HOST=todoback
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.todoapp.rule=Host(`todoapp.thiago.fgarioli.com.br`)"
+      - "traefik.http.routers.todoapp.tls=true"
+      - "traefik.http.routers.todoapp.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.todoapp.entrypoints=websecure"
+      - "traefik.http.services.todoapp.loadbalancer.server.port=3000"
+    networks:
+      - traefik
+      - todo-app
+    
   todotests:
     image: todotests
     build: ./todo-app/tests
@@ -25,3 +35,10 @@ services:
     depends_on:
       - todoback
       - todofront
+    networks:
+      - todo-app
+
+networks:
+  traefik:
+    external: true
+  todo-app:
