feat(/docker/todo-app/back-end/Dockerfile): Script "ENTRYPOINT", para determinar tipo de execução da aplicação back-end (DEV ou produção), criado e implementado

--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14-alpine AS build
 
 EXPOSE 3001
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app-backend
 
 ADD node_modules.tar.gz ./
 
@@ -10,4 +10,4 @@ COPY ["./","./"]
 
 RUN npm install
 
-ENTRYPOINT ["npm", "start"]
+ENTRYPOINT if [ $DEV = true ]; then npm rum dev; else npm start; fi
