refactor(/docker/todo-app/database/Dockerfile): Diretório "WORKDIR" alterado de "/usr/src/app" para "/usr/src/database"

--- a/docker/todo-app/database/Dockerfile
+++ b/docker/todo-app/database/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:8.0.21 AS todo_list_db
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/database
 
 ADD /todo_list_db.sql /docker-entrypoint-initdb.d/0_todo_list_db.sql
 
