refactor(/docker/todo-app/back-end/package.json): Script "dev" alterado para que o "nodemon" acompanhe o diretório "src" especificamente

--- a/docker/todo-app/back-end/package.json
+++ b/docker/todo-app/back-end/package.json
@@ -6,7 +6,7 @@
   "main": "./src/api/server.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon .",
+    "dev": "nodemon --watch \"./src/**\" ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
