--- a/docker/todo-app/back-end/package.json
+++ b/docker/todo-app/back-end/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "^16.0.3",
     "express": "4.17.1",
     "morgan": "1.10.0",
+    "mysql2": "^2.3.3",
     "uuid": "8.3.2"
   },
   "devDependencies": {
