--- a/docker/todo-app/back-end/package.json
+++ b/docker/todo-app/back-end/package.json
@@ -14,8 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "morgan": "1.10.0",
-    "mysql2": "^2.3.3",
-    "uuid": "8.3.2"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "2.0.12"
