--- a/docker/todo-app/back-end/package.json
+++ b/docker/todo-app/back-end/package.json
@@ -10,9 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "1.10.0",
     "mysql2": "^2.3.3"
   },
