--- a/docker/todo-app/database/Dockerfile
+++ b/docker/todo-app/database/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /usr/src/database
 
 ADD /todo_list_db.sql /docker-entrypoint-initdb.d/0_todo_list_db.sql
 
-ADD /initial_data.sql /docker-entrypoint-initdb.d/1_initial_data.sql
+ADD /initial_users.sql /docker-entrypoint-initdb.d/1_initial_users.sql
+
+ADD /initial_todo_list.sql /docker-entrypoint-initdb.d/2_initial_todo_list.sql
 
 RUN chmod -R 775 /docker-entrypoint-initdb.d
 
