chore(/docker/todo-app/front-end/Dockerfile): Script do "ENTRYPOINT" alterado para implementar inicialização condicional baseado no ambiente de execução (dev ou produção)

--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -10,4 +10,4 @@ COPY ["./","./"]
 
 RUN npm install
 
-ENTRYPOINT ["npm", "start"]
+ENTRYPOINT if [ $DEV = true ]; then npm run dev; else npm start; fi
