--- a/docker/docker-compose.dev.yaml
+++ b/docker/docker-compose.dev.yaml
@@ -66,16 +66,12 @@ services:
     restart: "always"
     ports:
       - 3003:3306
-    environment:
-      - MYSQL_DATABASE=todo_list_db
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_USER=test
-      - MYSQL_PASSWORD=test123
     platform: linux/x86_64
     cap_add:
       - SYS_NICE # Deve omitir alertas menores
     volumes:
       - ./todo-app/database:/usr/src/database # Mapeamento apenas para ambiente DEV
+      - ./todo-app/database/.env.development.local:/usr/src/database/.env
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
     healthcheck:
