chore(/docker/todo-app/database/Dockerfile.prod): "build" do Dockerfile do container "dev_tododb" alterado para utilizar "Dockerfile.dev"

--- a/docker/docker-compose.dev.yaml
+++ b/docker/docker-compose.dev.yaml
@@ -59,7 +59,9 @@ services:
   dev_tododb:
     container_name: dev_tododb
     image: tododb
-    build: ./todo-app/database
+    build: 
+      context: ./todo-app/database
+      dockerfile: ./Dockerfile.dev
     working_dir: /usr/src/database
     restart: "always"
     env_file:
