--- a/docker/todo-app/front-end/package.json
+++ b/docker/todo-app/front-end/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "1.1.2"
   },
   "scripts": {
-    "start": "node -r dotenv/config ./node_modules/.bin/react-scripts start dotenv_config_path=.env.production.local",
+    "start": "node -r dotenv/config ./node_modules/.bin/react-scripts start dotenv_config_path=.env",
     "dev": "node -r dotenv/config ./node_modules/.bin/react-scripts start dotenv_config_path=.env.development.local",
     "build": "node -r dotenv/config ./node_modules/.bin/react-scripts build dotenv_config_path=.env.production.local",
     "test": "react-scripts test",
