--- a/docker/docker-compose.prod.yaml
+++ b/docker/docker-compose.prod.yaml
@@ -6,6 +6,8 @@ services:
     build: ./todo-app/back-end
     working_dir: /usr/src/app-backend
     restart: always
+    env_file:
+      - stack.env # Configuração necessária para o Portainer
     ports:
       - 3121:3121
     volumes:
@@ -22,6 +24,8 @@ services:
     build: ./todo-app/front-end
     working_dir: /usr/src/app-frontend
     restart: always
+    env_file:
+      - stack.env # Configuração necessária para o Portainer
     ports:
       - 3120:3120
     volumes:
@@ -46,8 +50,8 @@ services:
     build: ./todo-app/tests
     working_dir: /usr/local/bin
     restart: always
-    # env_file:
-    #   - ./todo-app/tests/.env.production.local
+    env_file:
+      - stack.env # Configuração necessária para o Portainer
     volumes:
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
@@ -65,8 +69,8 @@ services:
       dockerfile: ./Dockerfile.prod
     working_dir: /usr/src/database
     restart: "always"
-    # env_file:
-    #   - ./todo-app/database/.env.production.local
+    env_file:
+      - stack.env # Configuração necessária para o Portainer
     ports:
       - 3004:3306
     platform: linux/x86_64
