--- a/docker/docker-compose.prod.yaml
+++ b/docker/docker-compose.prod.yaml
@@ -65,6 +65,7 @@ services:
     ports:
       - 3004:3306
     platform: linux/x86_64
+    tty: true
     cap_add:
       - SYS_NICE # Deve omitir alertas menores
     volumes:
